--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,7 +2,7 @@ weather:
   apikey: replaceme
   latitude: 0.0
   longitude: 0.0
-  interval: 60
+  interval: 300
 
 redis:
   server: localhost
@@ -10,3 +10,10 @@ redis:
 
 display:
   fbdev: /dev/fb1
+
+sensor:
+  gpio: 4
+  type: DHT11
+  pollinterval: 1
+  updateinterval: 10
+  averages: 5
