--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Adafruit_Python_DHT"]
 	path = Adafruit_Python_DHT
 	url = https://github.com/adafruit/Adafruit_Python_DHT.git
+[submodule "Adafruit_Python_MCP9808"]
+	path = Adafruit_Python_MCP9808
+	url = https://github.com/adafruit/Adafruit_Python_MCP9808.git
